fixed corners on iOS

--- a/3dprinting/3dprint-style.css
+++ b/3dprinting/3dprint-style.css
@@ -45,20 +45,20 @@ section{
     max-width: 100vw;
 }
 .filament{
-    margin:10px;
     width: 100%;
-
+    margin-bottom: 8px;
     max-width: 500px;
     color: #fff;
-    outline: 2px solid white;
+    border: 2px solid white;
     font-weight: bold;
     border-radius: 30px;
     display:flex;
     padding:10px;
 }
+/* phone */
 .filament img{
-    height: 130px;
-    width: 130px;
+    height: 30vw;
+    width: 30vwpx;
     border-radius:10%;
     margin:20px;
 }
@@ -77,6 +77,7 @@ section{
 .colors{
     margin:5px;
     display:flex;
+    flex-direction: row;
     flex-wrap: wrap;
 }
 .color{
@@ -112,10 +113,10 @@ a{
 }
 .link-external{
     padding:20px;
-    margin:10px;
+    margin:8px;
     background-color: #2E3561;
     color:#fff;
-    outline: 2px solid white;
+    border: 2px solid white;
     border-radius: 0.5em;
     text-transform: uppercase;
     text-decoration: none;
@@ -198,7 +199,10 @@ a{
         display:flex;
         flex-wrap: 1;
     }
-
+    .filament>img{
+        width: 20vh;
+        height: 20vh;
+    }
     /* 
         
     }
